--- a/.github/workflows/ci-build-armv7.yml
+++ b/.github/workflows/ci-build-armv7.yml
@@ -40,6 +40,7 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: .
+          file: Dockerfile.template
           platforms: ${{ matrix.platform }}
           push: false
           tags: test/monero-balena:ci-${{ matrix.arch }}
